backtranslation comment restored

--- a/concepts/product/test/red-teaming-strategies.mdx
+++ b/concepts/product/test/red-teaming-strategies.mdx
@@ -46,7 +46,7 @@ Below are the main red teaming strategies available in Galtea:
 
 <Note> **Roleplay, Persuasive Content, Creative Writing, Data Analysis, Bait and Switch and Empathetic Framing** uses the **Product Description** in order to further customize the transformation of the original attack.</Note>
 
-[comment]: # (- **Multilingual**: Mix multiple languages within a prompt to evade monolingual filters. *Useful for bypassing language-specific moderation.*)
+[comment]: # (- **Backtranslation**: Translate prompts to another language and back to introduce subtle changes. *Can alter phrasing to evade detection.*)
 [comment]: # (- **Citation**: Add academic or formal citations to prompts to lend credibility or mask intent. *Can make harmful requests appear legitimate.*)
 [comment]: # (- **Multilingual**: Mix multiple languages within a prompt to evade monolingual filters. *Useful for bypassing language-specific moderation.*)
 
