Fix note formatting in red teaming strategies documentation

--- a/concepts/product/test/red-teaming-strategies.mdx
+++ b/concepts/product/test/red-teaming-strategies.mdx
@@ -44,7 +44,7 @@ Below are the main red teaming strategies available in Galtea:
 - **Bait and Switch**: Lowers model defenses with harmless, product-related queries before delivering the malicious payload in the same prompt using natural transitions. *Exploits context switching to bypass initial safety checks.*
 - **Empathetic Framing**: Disguises malicious requests as charitable acts of helping vulnerable third parties, creating emotional conflicts that make refusal seem uncharitable. *Exploits empathy and helpfulness to pressure compliance.*
 
-<Note> **Roleplay, Persuasive Content, Creative Writing, Data Analysis, Bait and Switch and Empathetic Framing** use the **Product Description** in order to further customize the transformation of the original attack.</Note>
+<Note> **Roleplay, Persuasive Content, Creative Writing, Data Analysis, Bait and Switch, and Empathetic Framing** use the **Product Description** to further customize the transformation of the original attack.</Note>
 
 [comment]: # (- **Backtranslation**: Translate prompts to another language and back to introduce subtle changes. *Can alter phrasing to evade detection.*)
 [comment]: # (- **Citation**: Add academic or formal citations to prompts to lend credibility or mask intent. *Can make harmful requests appear legitimate.*)
