Removes Quality Test Evolutions
Removes references to Quality Test Evolutions from documentation.

This change simplifies the documentation and removes outdated references
to the Quality Test Evolutions feature, which is no longer actively used.
The `variants` parameter in the SDK is now exclusively used for specifying
Threats in Red Teaming tests.

Removes suggested test case types

Removes the suggested test case types section from the resilience-to-noise metric documentation.
The information is deemed redundant or not essential for understanding the metric.

--- a/concepts/metric/factual-accuracy.mdx
+++ b/concepts/metric/factual-accuracy.mdx
@@ -44,7 +44,7 @@ The scoring system provides granular feedback on response quality, allowing you 
 
 ## Suggested Test Case Types
 
-The Factual Accuracy metric effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea, since it asseses the model's ability to maintain factual correctness:
+The Factual Accuracy metric is effective for evaluating quality test cases in Galtea, since it asseses the model's ability to maintain factual correctness.
 
 ---
 
