--- a/concepts/metric/answer-relevancy.mdx
+++ b/concepts/metric/answer-relevancy.mdx
@@ -42,7 +42,7 @@ Higher scores indicate that the generator is effectively aligned with user queri
 
 ## Suggested Test Case Types
 
-The Answer Relevancy metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea, since it evaluates the model's ability to maintain relevance to user queries.
+The Answer Relevancy metric is effective for evaluating quality test cases in Galtea, since it evaluates the model's ability to maintain relevance to user queries.
 
 ---
 
