--- a/concepts/metric/contextual-precision.mdx
+++ b/concepts/metric/contextual-precision.mdx
@@ -39,7 +39,7 @@ Where **k** is a configurable cutoff (e.g., top 5 or top 10). This helps gauge w
 
 ## Suggested Test Case Types
 
-The Contextual Precision metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea for products that use RAG, since it measures the whether the model was able to gather useful information in retrieval for accurate and efficient response generation.
+The Contextual Precision metric is effective for evaluating quality test cases in Galtea for products that use RAG, since it measures the whether the model was able to gather useful information in retrieval for accurate and efficient response generation.
 
 ---
 
