--- a/concepts/metric/contextual-recall.mdx
+++ b/concepts/metric/contextual-recall.mdx
@@ -38,7 +38,7 @@ Higher scores reflect better recall—i.e., the retriever captured all necessary
 
 ## Suggested Test Case Types
 
-The Contextual Recall metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea for products that use RAG, since it measures whether the information retrieved sufficiently covers the knowledge needed to produce the correct output.
+The Contextual Recall metric is effective for evaluating quality test cases in Galtea for products that use RAG, since it measures whether the information retrieved sufficiently covers the knowledge needed to produce the correct output.
 
 
 ---
