--- a/concepts/metric/contextual-relevancy.mdx
+++ b/concepts/metric/contextual-relevancy.mdx
@@ -38,7 +38,7 @@ A higher score indicates that the retriever is effectively sourcing information 
 
 ## Suggested Test Case Types
 
-The Contextual Relevancy metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea for products that use RAG, since it measures whether the retrieved context is pertinent to the user's query.
+The Contextual Relevancy metric is effective for evaluating quality test cases in Galtea for products that use RAG, since it measures whether the retrieved context is pertinent to the user's query.
 
 
 ---
