--- a/concepts/metric/faithfulness.mdx
+++ b/concepts/metric/faithfulness.mdx
@@ -40,7 +40,7 @@ This helps teams monitor the risk of hallucinations and improve trust in generat
 
 ## Suggested Test Case Types
 
-The Faithfulness metric is effective for evaluating [all types of quality test cases](/concepts/product/test/quality-evolutions#available-evolution-types) in Galtea, for products that use RAG, since it measures the model's ability to maintain alignment with retrieved context:
+The Faithfulness metric is effective for evaluating quality test cases in Galtea, for products that use RAG, since it measures the model's ability to maintain alignment with retrieved context.
 
 ---
 
