Correct key categories count in product context
Updated the number of key categories in product context from four to five.

--- a/sdk/tutorials/create-product-description.mdx
+++ b/sdk/tutorials/create-product-description.mdx
@@ -5,7 +5,7 @@ icon: "bullseye"
 iconType: "solid"
 ---
 
-**Product context** forms the cornerstone of your AI evaluation strategy in Galtea. It clearly defines what your AI system is intended to accomplish, allowing the platform to generate relevant test cases, deliver meaningful evaluations, and provide actionable insights tailored to your use case. Galtea organizes product context into four key categories: **product description, capabilities, inabilities, security boundaries, and policies**. Below, we explain how to effectively provide each category for optimal evaluation results.
+**Product context** forms the cornerstone of your AI evaluation strategy in Galtea. It clearly defines what your AI system is intended to accomplish, allowing the platform to generate relevant test cases, deliver meaningful evaluations, and provide actionable insights tailored to your use case. Galtea organizes product context into five key categories: **product description, capabilities, inabilities, security boundaries, and policies**. Below, we explain how to effectively provide each category for optimal evaluation results.
 
 ## What Is a Product Description?
 
