Add 2025-10-15 changelog entry and update imports
Added new changelog files for 2025-10-15 in both HTML and MDX formats, detailing product policy support, advanced red teaming strategies, improved test generation, and platform usability enhancements. Updated changelog.mdx to import and display the new entry.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -24,7 +24,9 @@ import Changelog_2025_09_15 from "/snippets/changelog/2025-09-15.mdx";
 import Changelog_2025_09_22 from "/snippets/changelog/2025-09-22.mdx";
 import Changelog_2025_09_29 from "/snippets/changelog/2025-09-29.mdx";
 import Changelog_2025_10_06 from "/snippets/changelog/2025-10-06.mdx";
+import Changelog_2025_10_15 from "/snippets/changelog/2025-10-06.mdx";
 
+<Changelog_2025_10_15 />
 <Changelog_2025_10_06 />
 <Changelog_2025_09_29 />
 <Changelog_2025_09_22 />
