--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -79,6 +79,10 @@ The Galtea SDK allows you to create, view, and manage tests programmatically.
   </Card>
 </CardGroup>
 
+<Note>
+  When creating Quality Tests, you can use **Evolutions** to generate variations of your test cases. Learn more in the [Quality Test Evolutions](/concepts/product/test/quality-evolutions) documentation.
+</Note>
+
 ## Test Properties
 
 <ResponseField name="Test Name" type="Text" required>
