--- a/concepts/metric.mdx
+++ b/concepts/metric.mdx
@@ -110,17 +110,19 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
 </ResponseField>
 
 <ResponseField name="Validation method" type="Enum" required>
-  The method used to evaluate the metric. This can be either:
+  The method used to evaluate the metric. This can be one of three options:
 
   <Tabs>
-    <Tab title="LLM as a Judge">
-      A custom prompt that defines the evaluation logic for an LLM-as-a-judge metric. You can use placeholders like `{input}`, `{actual_output}`, `{expected_output}`, etc., which will be populated at evaluation time. 
+    <Tab title="Full Prompt">
+      This method, formerly known as "LLM as a Judge," gives you maximum control. You provide a complete judge prompt template with placeholders (e.g., `{input}`, `{actual_output}`). Galtea will populate the template and use an LLM to evaluate the output based on your exact instructions.
     </Tab>
-    <Tab title="None">
-      No validation method is applied. This means the metric is *not* automatically evaluated by Galtea and is intended for *deterministic metrics*.
+    <Tab title="Partial Prompt">
+      This method simplifies prompt creation. You provide only the core evaluation criteria or rubric in the judge prompt. Then, you select the necessary data (like `input`, `context`, etc.) from the **Evaluation Parameters** list. Galtea dynamically constructs the final prompt by prepending the selected data to your criteria, ensuring a consistent structure.
+    </Tab>
+    <Tab title="Self Hosted">
+      This method is for deterministic metrics that you score locally using the SDK's `CustomScoreEvaluationMetric`. No evaluation prompt is sent to Galtea. Instead, your custom logic runs on your infrastructure, and the resulting score is uploaded to the platform for tracking and analysis.
     </Tab>
   </Tabs>
-  
 </ResponseField>
 
 <ResponseField name="Evaluation Parameters" type="List[Enum]" required>
@@ -180,7 +182,32 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
       <tr>
         <td>**product_security_boundaries**</td>
         <td>The security boundaries of the product.</td>
-        <td>Yes</td>
+        <td>All metrics</td>
+      </tr>
+      <tr>
+        <td>**user_persona**</td>
+        <td>Information about the user interacting with the agent.</td>
+        <td>Scenarios tests</td>
+      </tr>
+      <tr>
+        <td>**goal**</td>
+        <td>The user's objective in the conversation.</td>
+        <td>Scenarios tests</td>
+      </tr>
+      <tr>
+        <td>**scenario**</td>
+        <td>The context or situation for the conversation.</td>
+        <td>Scenarios tests</td>
+      </tr>
+      <tr>
+        <td>**stopping_criterias**</td>
+        <td>List of criteria that define when a conversation should end.</td>
+        <td>Scenarios tests</td>
+      </tr>
+      <tr>
+        <td>**conversation_turns**</td>
+        <td>All turns in a conversation, including user and assistant messages.</td>
+        <td>Scenarios tests (Full Prompt only)</td>
       </tr>
     </tbody>
   </table>
