Update docs for session, test, and RAG agent usage
Clarified the meaning of the `is_production` flag in session creation. Added documentation for `custom_variant_description` in test creation for security tests. Expanded the simulating conversations tutorial with advanced usage for RAG agents, including how to return and log retrieval context for improved evaluation.

--- a/sdk/api/session/create.mdx
+++ b/sdk/api/session/create.mdx
@@ -32,5 +32,5 @@ session = galtea.sessions.create(
   The context provided to the AI product during the session.
 </ResponseField>
 <ResponseField name="is_production" type="boolean" optional>
-  A flag to indicate if the session is from a production environment. Defaults to `False`.
+  A flag to indicate if the session is from a production environment. When `True`, a `test_case_id` is not required. Defaults to `False`.
 </ResponseField>
