Fix disclaimer text formatting in policies section
Escaped angle brackets in the example disclaimer text to prevent rendering issues in the policies section of the product description tutorial.

--- a/sdk/tutorials/create-product-description.mdx
+++ b/sdk/tutorials/create-product-description.mdx
@@ -120,7 +120,7 @@ Things that the product must not do, although theoretically it has the capabilit
 ### Policies
 These are very specific instructions that the product needs to do, when it is faced with certain situations or user inputs.
 <Info>
-  Policies consist of expressions such as "**always** answer with **x** if asked about **y**" or "add **<specific disclaimer text>** at the end of your responses when asked about **z**" 
+  Policies consist of expressions such as "**always** answer with **x** if asked about **y**" or "add \<specific disclaimer text\> at the end of your responses when asked about **z**"
 </Info>
 ```
 * If asked for guaranteed returns, respond that all investments carry risk.
