Fix changelog import and update metric documentation
Corrects the import path for the 2025-10-15 changelog entry, updates the metric documentation to reference 'Self Hosted' instead of 'Custom' for validation method, and fixes the metrics service link in the Galtea API documentation.

--- a/concepts/metric.mdx
+++ b/concepts/metric.mdx
@@ -127,7 +127,7 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
 
 <ResponseField name="Evaluation Parameters" type="List[Enum]" required>
   <Info>
-    This must not be provided if the validation method is set to "Custom".
+    This must not be provided if the validation method is set to "Self Hosted".
   </Info>
   A list of relevant parameters for this metric's evaluation criteria or steps. These parameters should be explicitly mentioned in your evaluation criteria or steps to ensure they're taken into account during assessment.
   <table>
