--- a/changelog.mdx
+++ b/changelog.mdx
@@ -25,7 +25,9 @@ import Changelog_2025_09_22 from "/snippets/changelog/2025-09-22.mdx";
 import Changelog_2025_09_29 from "/snippets/changelog/2025-09-29.mdx";
 import Changelog_2025_10_06 from "/snippets/changelog/2025-10-06.mdx";
 import Changelog_2025_10_15 from "/snippets/changelog/2025-10-15.mdx";
+import Changelog_2025_10_27 from "/snippets/changelog/2025-10-27.mdx";
 
+<Changelog_2025_10_27 />
 <Changelog_2025_10_15 />
 <Changelog_2025_10_06 />
 <Changelog_2025_09_29 />
