Update test API docs and migration guide for new parameters
Added documentation for the 'custom_user_focus' and 'source_test_id' parameters in test creation. Clarified terminology for 'variants' in red teaming tests and updated migration guide to reflect changes from 'MetricType' to 'Metric' and usage of 'galtea.metrics'. Improved agent simulation notes regarding 'agent_goes_first' behavior.

--- a/concepts/product/test/red-teaming-threats.mdx
+++ b/concepts/product/test/red-teaming-threats.mdx
@@ -9,7 +9,7 @@ icon: ""
 A **threat** in the context of AI and LLMs is any scenario, input, or technique that could cause the model to behave in an unsafe, insecure, or unintended manner. Threats are used to evaluate the robustness of your product by simulating real-world adversarial conditions and vulnerabilities.
 
 <Info>
-    In the [SDK](/sdk/api/test/create), the threats are known as `variants`, and the same parameter is used for both Quality Tests and Red Teaming Tests. However, the available options differ between the two types of tests.
+  **SDK Parameter Note:** In the Galtea SDK, "Threats" are specified using the `variants` parameter in the [`galtea.tests.create()`](/sdk/api/test/create) method when creating `RED_TEAMING` tests. For example: `galtea.tests.create(..., type="RED_TEAMING", variants=["Toxicity", "Misuse", "data_leakage"])`.
 </Info>
 
 ## Threat Types
