Update changelog for quality generator improvements
Revised the changelog to highlight enhancements to the quality generator, including improved language detection and handling, as well as better processing of long documents for test case generation. Removed previous entry about Conversation Simulator grounded response validation.

--- a/snippets/changelog/2025-10-27.mdx
+++ b/snippets/changelog/2025-10-27.mdx
@@ -9,11 +9,13 @@ This new approach streamlines the creation of powerful, tailored [Metrics](/conc
   <img src="/images/changelog/2025-10-27_partial-prompt-metric.png" alt="Creating a metric with the new Partial Prompt method" />
 </Frame>
 
-## Conversation Simulator Now Validates Grounded Responses
+## Quality Generator with Improved Language Handling
 
-Our **[Conversation Simulator](/concepts/product/test/case/conversation-simulator)** just got smarter. It now takes the agent's `retrieval_context` into account, enabling the synthetic user to react dynamically to the information your agent provides.
+The LLM language confusion is now patched for the quality generator. Languages are formally detected for the whole document, and test cases are ensured to be generated with the correct language. This ensures more accurate and contextually appropriate test case generation across different language inputs.
 
-For example, if your RAG-based agent hallucinates a fact that isn't in the provided context, the simulator can now challenge that response (e.g., "I don't see that mentioned in the document you shared."). This provides a powerful new way to test the groundedness and reliability of your conversational AI systems.
+## Improved Long Context Processing for Quality Test Cases
+
+Our quality generator now intelligently processes long documents, ensuring optimal context is provided for the best quality generation of test cases. This enhancement streamlines the evaluation process and improves the reliability of generated test cases for comprehensive quality assessments.
 
 ## Platform Experience Enhancements
 
