Adds source parameter to metric creation
Clarifies the origin of metrics by adding a `source` parameter
during metric creation. This parameter, with options like
'full_prompt', 'partial_prompt', and 'self_hosted', aims to avoid
confusion about the metric's origin.

The parameter is currently optional, but will become required in
the future.

--- a/sdk/api/evaluation/create-single-turn.mdx
+++ b/sdk/api/evaluation/create-single-turn.mdx
@@ -32,7 +32,7 @@ class MyAccuracy(CustomScoreEvaluationMetric):
 custom_score_accuracy = MyAccuracy()
 
 # If the metric does not exist yet in the platform, you can create it like this:
-galtea.metrics.create(name=custom_score_accuracy.name, description='checks for the presence of the keyword "paris" in the output')
+galtea.metrics.create(name=custom_score_accuracy.name, source='self_hosted', description='checks for the presence of the keyword "paris" in the output')
 
 # Create evaluations using a mix of standard and custom metrics
 evaluations = galtea.evaluations.create_single_turn(
