--- a/sdk/usage.mdx
+++ b/sdk/usage.mdx
@@ -71,6 +71,7 @@ metric_from_api = galtea.metrics.create(
     name="accuracy_v1",
     test_type="QUALITY",
     evaluator_model_name="GPT-4.1",
+    source="full_prompt",
     judge_prompt="Determine whether the output is equivalent to the expected output. Output: \"{actual_output}\". Expected Output: \"{expected_output}.\""
 )
 
@@ -81,6 +82,7 @@ from galtea import CustomScoreEvaluationMetric
 metric_from_api = galtea.metrics.create(
     name="keyword-check",
     description="Checks if the 'actual output' contains the keyword 'expected'.",
+    source="self_hosted",
 )
 
 # Then, you can define your custom metric class
