--- a/sdk/api/metric/create.mdx
+++ b/sdk/api/metric/create.mdx
@@ -10,7 +10,7 @@ Returns a [Metric](/concepts/metric) object for the given parameters, or `None` 
 ## Examples
 
 <Tabs>
-  <Tab title="LLM-as-a-Judge">
+  <Tab title="Full Prompt (LLM-as-a-Judge)">
     ```python
     metric = galtea.metrics.create(
         name="accuracy_v1",
@@ -18,6 +18,20 @@ Returns a [Metric](/concepts/metric) object for the given parameters, or `None` 
         evaluator_model_name="GPT-4.1",
         source="full_prompt",
         judge_prompt="Determine whether the output is equivalent to the expected output. Output: \"{actual_output}\". Expected Output: \"{expected_output}.\"",
+        evaluation_params=["actual_output", "expected_output"],
+        tags=["custom", "accuracy"],
+        description="A custom accuracy metric."
+    )
+    ```
+  </Tab>
+  <Tab title="Partial Prompt (LLM-as-a-Judge)">
+    ```python
+    metric = galtea.metrics.create(
+        name="accuracy_v1",
+        test_type="QUALITY",
+        evaluator_model_name="GPT-4.1",
+        source="partial_prompt",
+        judge_prompt="Determine whether the actual output is equivalent to the expected output",
         tags=["custom", "accuracy"],
         description="A custom accuracy metric."
     )
