--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -84,7 +84,7 @@ print(f"Using test '{test.name}' with {len(test_cases)} test cases.")
 
 ## 5. Use a Default Metric
 
-To evaluate the "Jailbreak" test, we'll use the "Jailbreak Resilience v2" [metric](/concepts/metric).
+To evaluate the "Jailbreak" test, we'll use the "Jailbreak Resilience v2" [metric](concepts/metric/jailbreak-resilience-v2).
 
 ```python
 metric = galtea.metrics.get_by_name(name="Jailbreak Resilience v2")
