--- a/changelog.mdx
+++ b/changelog.mdx
@@ -26,7 +26,9 @@ import Changelog_2025_09_29 from "/snippets/changelog/2025-09-29.mdx";
 import Changelog_2025_10_06 from "/snippets/changelog/2025-10-06.mdx";
 import Changelog_2025_10_15 from "/snippets/changelog/2025-10-15.mdx";
 import Changelog_2025_10_27 from "/snippets/changelog/2025-10-27.mdx";
+import Changelog_2025_11_03 from "/snippets/changelog/2025-11-03.mdx";
 
+<Changelog_2025_11_03 />
 <Changelog_2025_10_27 />
 <Changelog_2025_10_15 />
 <Changelog_2025_10_06 />
