--- a/sdk/api/evaluation/create-single-turn.mdx
+++ b/sdk/api/evaluation/create-single-turn.mdx
@@ -62,10 +62,15 @@ evaluations = galtea.evaluations.create_single_turn(
 <ResponseField name="version_id" type="string" required>
   The ID of the version you want to evaluate.
 </ResponseField>
-<ResponseField name="metrics" type="List[string | CustomScoreEvaluationMetric]" required>
+<ResponseField name="metrics" type="List[string | CustomScoreEvaluationMetric]" optional>
   A list of metrics to use for evaluation. You can provide:
   - Standard metrics as strings (e.g., "Role Adherence").
   - Custom, locally-scored metrics as objects inheriting from `CustomScoreEvaluationMetric`.
+  <Note>Either `metrics` or `metric_ids` must be provided.</Note>
+</ResponseField>
+
+<ResponseField name="metric_ids" type="List[string]" optional>
+  A list of metric IDs to use for the evaluation. This can be used as an alternative to the `metrics` parameter.
 </ResponseField>
 <ResponseField name="actual_output" type="string" required>
   The actual output produced by the product.
