--- a/sdk/api/metric/create.mdx
+++ b/sdk/api/metric/create.mdx
@@ -68,7 +68,7 @@ Returns a [Metric](/concepts/metric) object for the given parameters, or `None` 
   - `"GPT-35-turbo"`
   - `"Gemini-2.5-Flash-Lite"`
   - `"Gemini-2.5-Flash"`
-  - `"Gemini-2.O-flash"`
+  - `"Gemini-2.0-flash"`
   - `"GPT-4o"`
   - `"GPT-4.1"`
 
